--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -57,12 +57,12 @@
   {\scriptsize\normalfont\item}
   {\etocname{} \hbox{}\nobreak\hfill\etocpage}
   {}
-\etocsetstyle{subsubsection}{\ERROR}{}{}{}
-\etocsetstyle{paragraph}
+\etocsetstyle{subsubsection} % produced by \paragraph, sorry
   {\begin{enumerate}[leftmargin=-8pt]}
   {\tiny\normalfont\item}
   {\etocname{}}
   {\end{enumerate}}
+\etocsetstyle{paragraph}{\ERROR}{}{}{}
 \etocsetstyle{subparagraph}{\ERROR}{}{}{}
 
 \hypersetup{unicode}
@@ -162,15 +162,13 @@
 \let\@@ignorespaces\ignorespaces
 \renewcommand{\paragraph}{%
  \def\ignorespaces{\leavevmode\let\ignorespaces\@@ignorespaces}%
- \@startsection {paragraph}{3}{\z@ }{-\smallskipamount}{-1sp}{\normalfont \bfseries }}
+ \@startsection {subsubsection}{3}{\z@ }{-\smallskipamount}{-1sp}{\normalfont \bfseries }}
 \makeatother
-%%% Sorry the next two lines are a bit horrible
-%\renewcommand{\paragraph}[1]{\par\noindent\textbf{#1}}
-%\newcommand{\definition}{\par\noindent\textbf{Def.} \ignorespaces}
-%\newcommand{\proposition}{\par\noindent\textbf{Prop.} \ignorespaces}
 \setlength{\parskip}{2pt plus 2pt minus 2pt}
 \setlength{\baselineskip}{10pt}
 \setlength{\parindent}{10pt}
+\setlength{\hfuzz}{1pt}
+\setlength{\vfuzz}{5pt}
 
 \newcommand{\tabfoot}[1]{\leavevmode\ensuremath{{}^{\tabfootsymb{#1}}}}
 \makeatletter
@@ -244,7 +242,7 @@
 
 \ExplSyntaxOn
 \NewDocumentCommand{\Lie}{m}{
-  \texorpdfstring { \textup } { \use:n }
+  \textup
   {
     \clist_if_in:nnF
       { GL , PGL , SL , PSL , SO , PSO , SU , PSU , U , PU , O , PO , Sp , PSp , USp , PUSp , OSp , POSp , Spin , PSpin , Pin, P , PS , A , B , C , D , E , F , G , Q , UQ , W , S , \tilde S , \tilde{S} , H , T }
@@ -253,7 +251,7 @@
   }
 }
 \NewDocumentCommand{\lie}{m}{
-  \texorpdfstring { \mathfrak } { \use:n }
+  \mathfrak
   {
     \str_case:nnF {#1}
       {
@@ -286,6 +284,11 @@
       } { \ERROR #1 }
   }
 }
+\pdfstringdefDisableCommands
+  {
+    \cs_set_eq:NN \Lie \use:n
+    \cs_set_eq:NN \lie \use:n
+  }
 \ExplSyntaxOff
 %\robustify\tilde
 
@@ -294,7 +297,7 @@
 
 \newcommand{\hepth}[1]{\href{http://arXiv.org/abs/hep-th/#1}{[hep-th/#1]}}
 \newcommand{\arxiv}[1]{\href{http://arXiv.org/abs/#1}{[#1]}}
-
+\newcommand{\inspire}[1]{\href{http://inspirehep.net/record/#1}{[inspire:#1]}}
 
 \begin{document}
 \twocolumn\raggedbottom
@@ -340,7 +343,7 @@ It has simple poles at $x\in\ZZ_{\leq 0}$ and no zero.
 \paragraph{Dedekind eta function:} $\eta(\tau)=q^{1/24}(q;q)_\infty$ for $q=\rme^{2\pi\I\tau}$. $\Delta=\eta^{24}$ is a modular form of weight~$12$.
 
 \paragraph{Theta functions:} q-theta $\thetafunction(z;q)=(z;q)_\infty(q/z;q)_\infty$ obeys $\thetafunction(z;q)=\thetafunction(q/z;q)=-z\thetafunction(1/z;q)$.
-Variant $\thetafunction_1(z;q)=\thetafunction_1(\tau|u)=\I z^{-1/2}q^{1/12}\eta(\tau)\thetafunction(z;q)=-\I z^{1/2}q^{1/8}(q;q)_\infty(qz;q)_\infty(\frac{1}{z};q)_\infty$
+Variant $\thetafunction_1(z;q)=\thetafunction_1(\tau|u)=\I z^{-1/2}\,q^{1/12}\,\eta(\tau)\,\thetafunction(z;q)=-\I z^{1/2}q^{1/8}(q;q)_\infty(qz;q)_\infty(1/z;q)_\infty$
 with $z=\rme^{2\pi\I u}$.
 
 \paragraph{Eisenstein series} ($k\geq 1$) $E_{2k}=1+\frac{2}{\zeta(1-2k)}\sum_{n=1}^{\infty}n^{2k-1}\frac{q^n}{1-q^n}$ obeys
@@ -348,8 +351,8 @@ $E_{2k}(\frac{a\tau+b}{c\tau+d})=(c\tau+d)^{2k}E_{2k}(\tau)+\frac{6}{\pi\I}c(c\t
 For $k\geq 2$ it is a modular form and $E_{2k}=\frac{1}{2\zeta(2k)}\sum_{0\neq\lambda\in\mathbb{Z}+\tau\mathbb{Z}} \lambda^{-2k}$.
 
 \paragraph{Elliptic gamma function}
-$\Gamma(z;p,q)=\plexp\frac{z-pq/z}{(1-p)(1-q)}=\prod_{m=0}^{\infty}\prod_{n=0}^{\infty}(1-p^{m+1}q^{m+1}z^{-1})/(1-p^mq^nz)$.
-Obeys $\Gamma(z;p,q)=\Gamma(z;q,p)=1/\Gamma(pq/z;p,q)$
+$\Gamma(z;p,q)=\plexp\frac{z-pq/z}{(1-p)(1-q)}=\prod_{m=0}^{\infty}\prod_{n=0}^{\infty}(1-p^{m+1}q^{m+1}z^{-1})/(1-p^mq^nz)$
+obeys $\Gamma(z;p,q)=\Gamma(z;q,p)=1/\Gamma(pq/z;p,q)$
 and $\Gamma(pz;p,q)=\thetafunction(z;q)\Gamma(z;p,q)$
 and $\Gamma(z;0,q)=1/(z;q)_\infty$.
 
@@ -364,8 +367,8 @@ $\Li_2(x)+\Li_2(y)-\Li_2(xy)=\Li_2(t)+\Li_2(u)+\log(1-t)\log(1-u)$ where $x=t/(1
 
 \paragraph{Gauss hypergeometric function} is given by
 $_2F_1(a,b;c;z)=\sum_{n\geq 0}z^n(a)_n(b)_n/\bigl(n!(c)_n\bigr)$
-where $(a)_n=a(a+1)\dots(a+n-1)$,
 converging for $\abs{z}<1$, continued to $\CC\setminus[1,\infty)$ with branch cut.
+Here $(a)_n=a(a+1)\dots(a+n-1)$.
 
 \paragraph{Generalized hypergeometric functions:} let $a_i,b_i\not\in\ZZ_{\leq 0}$.
 Then $_{j}F_{k}(a;b;z)=\sum_{n\geq 0} z^n (a_1)_n\dots(a_j)_n/\bigl(n!(b_1)_n\dots(b_k)_n\bigr)$
@@ -667,7 +670,7 @@ For $p,q\geq 1$, $\pi_0(\Lie{O}(p,q))=\pi_0(\Lie{O}(p))\times\pi_0(\Lie{O}(q))=\
 the identity component $\Lie{SO}_+(p,q)$ has a double cover $\Lie{Spin}(p,q)$.
 The eight double covers of $\Lie{O}(p,q)$ differ in whether $R^2$, $T^2$ and $(RT)^2$ are $+1$ or $(-1)^F$.
 
-\paragraph{Accidental isomorphisms} (low-rank real reductive Lie groups)
+\paragraph{Accidental isomorphisms} (real reductive Lie groups)
 $\RR/\ZZ=\Lie{U}(1)$; $\Lie{SU}(2)=\Lie{Spin}(3)\twoheadrightarrow\Lie{SO}(3)$; \ldots{}
 
 % todo: complete list of isomorphisms, perhaps describe embeddings e.g. of SO(1,3)=SL(2,C) in Spin(4,C)=SL(2,C)xSL(2,C)?
@@ -925,6 +928,8 @@ corresponds to $(\frac{1}{2}d+1)$-gons fermion loops with an even number of stre
 
 \section{Supersymmetry algebras}
 
+\subsection{Generalities}
+
 \paragraph{The Poincar\'e algebra} is $\RR^{s,t} \rtimes \lie{so}(s,t)$, the semi-direct product of translations by rotations.
 Namely, $[P_{a},P_{b}]=0$, $[M_{ab},P_{c}]=2ih_{c[a}P_{b]}$, and $[M_{ab},M^{cd}]=4ih_{[a}^{[c}M_{b]}^{d]}$.
 
@@ -989,7 +994,7 @@ The 1d column gives the number of real supercharges.
 4d $\Nsusy=2$ supersymmetry on~$S^4$ is $\lie{osp}(2|4)$.
 2d $\Nsusy=(2,2)$ supersymmetry on~$S^2$ is $\lie{osp}(2|2)$.
 
-\subsection{Explicit supersymmetry algebras}
+\subsection[Explicit susy algebras]{Explicit supersymmetry algebras}
 
 \paragraph{4d \(\Nsusy=2\).}
 $\{Q_\alpha^A,\overline{Q}_{\dot{\alpha}}^B\} =
@@ -1201,7 +1206,7 @@ Wilson line in a unitary representation $M=M_0\oplus M_1$ of~$\lie{g}$,
 flavour symmetry group $G_F\subseteq\Lie{U}(V)\times\Lie{U}(M_0)\times\Lie{U}(M_1)$ commuting with~$G$.
 Gauge anomaly cancellation: $M\otimes\det^{1/2}V$ must be a representation of~$G$.
 
-Continuous data: gauge couplings, FI parameters, flavour Wilson line and real mass $v,\sigma\in\lie{g}_F$ that commute, $\lie{g}$-equivariant holomorphic odd map $Q\colon V\to \End M$ with $Q^2=0$ describing how supercharges act on~$M$.
+Continuous data: gauge couplings, FI parameters, flavour Wilson line and real mass $v,\sigma\in\lie{g}_F$ that commute, $\lie{g}$-equiv\-ariant holomorphic odd map $Q\colon V\to \End M$ with $Q^2=0$ describing how supercharges act on~$M$.
 
 Special case: Fermi multiplets in representation~$V_{\text{f}}$ of~$G$ with $G$-equivariant holomorphic maps $E\colon V\to V_{\text{f}}$ and $J\colon V\to V_{\text{f}}^{\vee}$ obeying $J\cdot E=0$ are equivalent to Wilson line in $M=\wedge V_{\text{f}}\otimes\det^{-1/2}V_{\text{f}}$ with $Q=E\wedge{}+J\lrcorner{}$.
 
@@ -1285,7 +1290,7 @@ Relations: $S^2\colon J\to -J$ simply, while $(ST)^3$ multiplies path integral b
 \subsection{Supergravity and strings}
 
 \paragraph{String actions}
-Polyakov action $L_{\text{P}}=\lambda^{mn}[(\partial_m X)(\partial_n X)-g_{mn}]+\frac{1}{\alpha'}\sqrt{-g}$.  Using equations of motion get Nambu--Goto action $L_{\text{NG}}=\frac{1}{\alpha'}\sqrt{-\det[(\partial_m X)(\partial_n X)]}$ or Brink--di Veccia--Howe--Deser--Zumino action $L_{\text{BdVHDZ}}=\frac{1}{2\alpha'}\sqrt{-g}[g^{mn}(\partial_m X)(\partial_n X)-(d-2)]$ with $d=2$ the world-sheet dimension.
+Polyakov action $L_{\text{P}}=\lambda^{mn}[(\partial_m X)(\partial_n X)-g_{mn}]+\frac{1}{\alpha'}\sqrt{-g}$.  Using equations of motion get Nambu--Goto action $L_{\text{NG}}=\frac{1}{\alpha'}\sqrt{-\det[(\partial_m X)(\partial_n X)]}$ or \inspire{109550} action $L_{\text{BdVHDZ}}=\frac{1}{2\alpha'}\sqrt{-g}[g^{mn}(\partial_m X)(\partial_n X)-(d-2)]$ with $d=2$ the world-sheet dimension.
 
 \paragraph{Pure supergravities} in $4\leq d\leq 11$.  Gravity is topological in $d=3$.  The maximum number of supercharges $Q=32$ forbids $d>11$.  A priori, all $Q=4k$ are possible.  Focus on $32, 16, 8, 4$.
 \begin{tab}{lcccc}
@@ -1304,7 +1309,7 @@ $(1,0)$ &\\
 &$N=1$\\
 \end{tab}
 
-\tabfoot{1} 10d $(1,0)$ supergravity (``type I'') has a \href{http://inspirehep.net/record/192309}{gravitational anomaly}.
+\tabfoot{1} 10d $(1,0)$ supergravity (``type I'') has a gravitational anomaly \inspire{192309}.
 (Perhaps 6d $(2,0)$ or $(1,0)$ supergravity too?)
 
 \paragraph{M-theory} has as its low-energy limit 11d supergravity, which has two $\frac{1}{2}$-BPS membrane solutions (with $16$~Killing spinors):
@@ -1345,7 +1350,7 @@ Has AdS/CFT dual with linear dilaton background.
 
 \section{Dualities}
 
-\subsection{4d $\Nsusy=1$ dualities}
+\subsection{4d \(\Nsusy=1\) dualities}
 
 \paragraph{IR duality:} the ``electric'' theory A has the same IR limit as the ``magnetic'' theory B\@:
 TQFT\@, SCFT\@, free theory, infinite flow, or sum of products thereof.
@@ -1359,8 +1364,8 @@ superconformal index ($S^3_b\times S^1$ partition function).
 \paragraph[Seiberg duality: \(\Lie{SU}\) with flavours]{Seiberg duality} \hepth{9411149}
 \smash{\mathtikz[inner sep=1pt]{
   \node (A) at (0,0) [rectangle,draw] {$\Lie{SU}(F)$};
-  \node (B) at (1.5,0) [rounded rectangle,draw] {$\Lie{SU}(C)$};
-  \node (C) at (3,0) [rectangle,draw] {$\Lie{SU}(F)$};
+  \node (B) at (1.45,0) [rounded rectangle,draw] {$\Lie{SU}(C)$};
+  \node (C) at (2.9,0) [rectangle,draw] {$\Lie{SU}(F)$};
   \draw[->-=.6] (A) -- (B) node [midway,above] {$Q$};
   \draw[->-=.6] (B) -- (C) node [midway,above] {$\tilde{Q}$};
 }}
@@ -1509,7 +1514,9 @@ Duality likely generalizes to $W=\Tr P(X)+\sum_i\tilde{Z}_iX^{k_i}Z_i$
 with an $\Lie{SU}(F\deg P+\sum_ik_i-C)$ dual.
 
 \paragraph{Other 4d \(\Nsusy=1\) dualities}
-Brodie, Intriligator--Pouliot, Argyres--Intriligator--Leigh--Strassler, Klebanov cascade, Intriligator--Leigh--Strassler, Kutasov--Lin.
+Brodie, Intriligator--Pouliot,\\
+Argyres--Intriligator--Leigh--Strassler, Klebanov cascade,\\
+Intriligator--Leigh--Strassler, Kutasov--Lin.
 
 \subsection{3d dualities}
 
@@ -1879,8 +1886,8 @@ confining $\sigma R$.
 are anti-self-dual ($F=-{\star F}$) connections on~$\RR^4$ that decay at infinity and extend to~$S^4$.
 The bundles are classified by $\pi_3(G)$ so an instanton number $k\in\ZZ$ for simple gauge groups;
 for fixed $k\geq 0$ ($k\leq 0$) (anti)instantons minimize the action.
-The $k$-instanton moduli space for $G=\Lie{SU}(N)$ is a $4Nk$-dimensional \href{http://inspirehep.net/record/128223}{[inspi:128223]} hyperK\"ahler manifold,
-in bijection with rank~$N$ framed locally free sheaves on~$\CC\PP^2$ \href{http://inspirehep.net/record/125044}{[inspi:125044]}.
+The $k$-instanton moduli space for $G=\Lie{SU}(N)$ is a $4Nk$-dimensional \inspire{128223} hyperK\"ahler manifold,
+in bijection with rank~$N$ framed locally free sheaves on~$\CC\PP^2$ \inspire{125044}.
 
 \subsection{Homology and cohomology}
 
@@ -1978,7 +1985,7 @@ $\alpha_i(\Sigma)=0$.
 
 \paragraph{\(S\)-expansion of a Lie (super)algebra}~$\lie{G}$ by an abelian multiplicative semigroup~$S$: Lie (super)algebra $\lie{G}\times S$ with bracket $[(x,\alpha),(y,\beta)]=([x,y],\alpha\beta)$.  If $S=S_1\cup S_2$ with $S_1 S_2\subseteq S_2$ (in particular if there is a zero element $0_S=0_S\alpha=\alpha 0_S$) then by reduction we get a Lie (super)algebra structure on $\lie{G}\times S_1$.
 
-\paragraph{A color (super)algebra} is a graded vector space with a bracket such that (for $X$, $Y$, $Z$ with definite grading) $\gr [X,Y] = \gr X+\gr Y$ and $[X,Y]=-(-1)^{(\gr X,\gr Y)}[Y,X]$ and $[X,[Y,Z]](-1)^{(\gr Z,\gr X)}+[Y,[Z,X]](-1)^{(\gr X,\gr Y)}+[Z,[X,Y]](-1)^{(\gr Y,\gr Z)}=0$, where $(\bullet,\bullet)$ is some bilinear mapping into $\CC/(2\ZZ)$.
+\paragraph{A color (super)algebra} is a graded vector space with a bracket such that (for $X$, $Y$, $Z$ with definite grading) $\gr [X,Y] = \gr X+\gr Y$ and $[X,Y]=-(-1)^{(\gr X,\gr Y)}[Y,X]$ and Jacobi identity $[X,[Y,Z]](-1)^{(\gr Z,\gr X)}+[Y,[Z,X]](-1)^{(\gr X,\gr Y)}+[Z,[X,Y]](-1)^{(\gr Y,\gr Z)}=0$, where $(\bullet,\bullet)$ is some bilinear mapping into $\CC/(2\ZZ)$.
 
 \subsection{Other}
 
