Some things about classifying 4d N=2 and similar theories

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1124,13 +1124,25 @@ The Higgs branch flavour symmetry is then $\{x\in F\mid xG=Gx,xH=Hx\}/H$.
 % todo: discrete R-symmetries?
 
 \paragraph{4d \(\Nsusy=4\)} has exactly marginal parameter $\tau=\thetaangle/(2\pi)+4\pi i/g^2$.
+Lagrangian theories are characterized by~$G$ but non-Lagrangian theories are not ruled out.
+
+\subsection{Theories with \(12\) supercharges}
+
+\paragraph{4d \(\Nsusy=3\)} theories exist, always non-Lagrangian.
 
 \subsection{Theories with \(8\) supercharges}
+
+\paragraph{6d \(\Nsusy=(1,0)\)} UV-complete Lagrangian gauge theories classified in \arxiv{1502.05405,1502.06594}.
 
 \paragraph{5d \(\Nsusy=1\) SCFTs} built from 5-brane diagrams or UV fixed point of gauge theory.
 
 $\Lie{SU}(2N)$ SYM with $\Nf\leq 7$ fundamental hypermultiplets has $\Lie{SO}(2\Nf)\times\Lie{U}(1)_T\subset\Lie{E}_{\Nf+1}$ flavour symmetry enhancement.
 For $\Lie{SU}(2)$ and $\Nf=0$, non-trivial ``$\thetaangle$'' in $\pi_4(\Lie{SU}(2))=\ZZ_2$ gives the $\widetilde{E}_1$~theory with $\Lie{U}(1)_T$~symmetry only.
+
+\paragraph{4d \(\Nsusy=2\) gauge theories} classified in \arxiv{1309.5160}:
+$\Lie{SU}(2)^n$ gauge group with trifundamental hypermultiplets;
+quiver in the shape of a (possibly single-node) Dynkin or affine Dynkin diagram;
+finitely many exceptions.
 
 \paragraph{4d \(\Nsusy=2\) generalities}
 
