Slight clarification to superconformal algebras

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -973,20 +973,20 @@ Since $S^2 Q$ has $1$, $2$, and $5$-forms, there are $2$-form and $5$-form centr
 
 \smallskip
 
-\paragraph{Superconformal algebras} are the same as super $AdS_{d+1}$.
+\paragraph{Lorentzian superconformal algebras} are the same as super $AdS_{d+1}$.
 The bosonic part is $\lie{so}(d,2)$ and R-symmetries.
-As a supermatrix: $\begin{pmatrix}\lie{so}(d,2)& Q+S\\ Q-S&R\end{pmatrix}$ or $\lie{so}(d,2)\leftrightarrow R$.  Note that $\{Q,S\}$ contains~$R$.
+As a supermatrix: $\begin{pmatrix}\lie{so}(d,2)& Q+S\\ Q-S&R\end{pmatrix}$ or $\begin{pmatrix}R& Q+S\\ Q-S&\lie{so}(d,2)\end{pmatrix}$.  Note that $\{Q,S\}$ contains~$R$.
 For $d=2$, the finite conformal algebra is $\lie{so}(2,2)=\lie{so}(2,1)\oplus \lie{so}(2,1)$, sum of two $d=1$ algebras, so the superalgebra is sum of two $d=1$ superalgebras.
 \begin{tab}{lllc}
-$d$& Superalgebra& R-symmetries & \#Q+\#S\\ \midrule
+$d$& Superalgebra& R-symm (compact) & \#Q+\#S\\ \midrule
 $1$&  $\lie{osp}(N|2)$ & $\lie{o}(N)$    & $2N$ \\
    &  $\lie{su}(N|1,1)$  &$\lie{su}(N)\oplus \lie{u}(1)$ for $N\neq 2$ &$ 4N$ \\
    &  $\lie{su}(2|1,1)           $    &$\lie{su}(2)              $ &$ 8   $\\
    &  $\lie{osp}(4^*|2N)         $    &$\lie{su}(2)\oplus \lie{usp}(2N)$ &$ 8N  $\\
-   &  $\lie{G}(3)                $    &$\lie{G}_2                $ &$ 14  $\\
+   &  $\lie{G}_{-14}(3)           $    &$\lie{G}_{2(-14)}                $ &$ 14  $\\
    &  $\lie{F}^0(4)                $    &$\lie{so}(7)              $ &$ 16  $\\
    &  $\lie{D}^0(2,1,\alpha)     $    &$\lie{su}(2)\oplus \lie{su}(2)  $ &$  8  $\\  \midrule
-$3$&$ \lie{osp}(N|4)   $ &$ \lie{so}(N) $&$ 4N $\\   \midrule
+$3$&$ \lie{osp}(N|4)   $ &$ \lie{so}(N) $ &$ 4N $\\   \midrule
 $4$&$ \lie{su}(2,2|N)  $ &$\lie{su}(N)\oplus \lie{u}(1)$ for $N\neq 4$&$ 8N$\\
    &$ \lie{su}(2,2|4)  $ &$  \lie{su}(4)$ & 32\\  \midrule
 $5$&$ \lie{F}^2(4)       $ &$ \lie{su}(2) $ & 16 \\       \midrule
