3d dualities with scalars and fermions

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1584,6 +1584,14 @@ Integrating out one fermion of large mass~$m$ shifts $F\to F-1$.
 For $\mp m>0$ get $k\to k+1/2$; the dual scalar becomes massive and $k+F/2$ is unchanged.
 For $\pm m>0$ get $k\to k-1/2$; the dual scalar has Mexican potential so $k+F/2\to k+F/2-1$.
 
+\paragraph{With scalars and fermions} \arxiv{1712.00020,1712.04933} (less firm footing).
+Denote ``$\phi$'' and ``$\psi$'' for scalars and fermions,
+let $(X,X')$ be one of $(\Lie{SU},\Lie{U})$, $(\Lie{SO},\Lie{SO})$, $(\Lie{Sp},\Lie{Sp})$,
+and assume $0\leq S\leq N$, $0\leq F\leq k$ and
+additionally $(S,F)\neq(N,k)$ for $(X,X')=(\Lie{SU},\Lie{U})$ and $S+F+3\leq N+k$ for $\Lie{SO}$.
+The duality is then $X(N)_{k-F/2},S\phi,F\psi$ $\leftrightarrow$ $X'(k)_{-N+S/2},F\phi,S\psi$.
+
+
 
 \subsection{Field theory dualities}
 
