Trivial title change

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -1560,7 +1560,7 @@ In this table ``type~IIA'' \etc{} refer to string theories not supergravities
 
 \section{Manifolds}
 
-\subsection{(Pseudo-)Riemannian geometry}
+\subsection{Pseudo-Riemannian geometry}
 
 $T_{\dots\lambda[\mu_1\dots\mu_m]\nu\dots}=m!^{-1}\sum_{\sigma\in S_m}\epsilon(\sigma)T_{\dots\lambda\mu_{\sigma(1)}\dots\mu_{\sigma(m)}\nu\dots}$ antisymmetrization,
 where $\epsilon(\sigma)=\pm 1$ is the signature of the permutation; symmetrization $T_{\dots\lambda(\mu_1\dots\mu_m)\nu\dots}$ is without $\epsilon$.
